add BM25 and Luhn hybride with legapegasus notebook

--- a/evaluate models/test-Luhn.ipynb
+++ b/evaluate models/test-Luhn.ipynb
@@ -53,7 +53,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:23<00:00,  4.19it/s]\n"
+      "100%|██████████| 100/100 [00:25<00:00,  3.92it/s]\n"
      ]
     }
    ],
@@ -92,7 +92,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 1312.26it/s]\n"
+      "100%|██████████| 100/100 [00:00<00:00, 2195.83it/s]\n"
      ]
     }
    ],
@@ -133,10 +133,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\Nicolas\\anaconda3\\Lib\\site-packages\\transformers\\utils\\generic.py:260: FutureWarning: `torch.utils._pytree._register_pytree_node` is deprecated. Please use `torch.utils._pytree.register_pytree_node` instead.\n",
-      "  torch.utils._pytree._register_pytree_node(\n",
-      "c:\\Users\\Nicolas\\anaconda3\\Lib\\site-packages\\transformers\\utils\\generic.py:260: FutureWarning: `torch.utils._pytree._register_pytree_node` is deprecated. Please use `torch.utils._pytree.register_pytree_node` instead.\n",
-      "  torch.utils._pytree._register_pytree_node(\n",
+      "Some weights of the model checkpoint at roberta-large were not used when initializing RobertaModel: ['lm_head.dense.bias', 'lm_head.layer_norm.bias', 'lm_head.layer_norm.weight', 'lm_head.bias', 'lm_head.dense.weight']\n",
+      "- This IS expected if you are initializing RobertaModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing RobertaModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
       "Some weights of RobertaModel were not initialized from the model checkpoint at roberta-large and are newly initialized: ['roberta.pooler.dense.bias', 'roberta.pooler.dense.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
@@ -254,10 +253,10 @@
      "output_type": "stream",
      "text": [
       "                     rouge1    rouge2    rougeL  bert_score  Execution time\n",
-      "global             0.588764  0.214408  0.292684    0.828830       23.890472\n",
-      "facts_of_the_case  0.430848  0.063562  0.257583    0.791962       23.890472\n",
-      "question           0.481743  0.074146  0.379399    0.788924       23.890472\n",
-      "conclusion         0.456249  0.075400  0.263765    0.794592       23.890472\n"
+      "global             0.588764  0.214408  0.292684    0.828830       25.490329\n",
+      "facts_of_the_case  0.430848  0.063562  0.257583    0.791962       25.490329\n",
+      "question           0.481743  0.074146  0.379399    0.788924       25.490329\n",
+      "conclusion         0.456249  0.075400  0.263765    0.794592       25.490329\n"
      ]
     }
    ],
