--- a/analysis/summary_comparasion.ipynb
+++ b/analysis/summary_comparasion.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_method = 'BART'\n",
+    "base_method = 'LexRank'\n",
     "hybrid_method = 'Lex_BART'\n",
     "text_index = 0\n",
     "\n",
